# mcpilot

./: .dockerignore  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json
.claude/: launch.json
src/kothar/: indexer.py  search.py  server.py
src/mcpilot/: indexer.py  search.py  server.py
tests/: test_indexer.py  test_search.py  test_server.py
