[project]
name = "mcpilot"
version = "0.1.0"
description = "Context-aware MCP server advisor — recommends the right MCP servers for your project and explains why"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "duckdb>=1.0",
    "sentence-transformers>=3.0",
    "requests>=2.33.0",
    # torch is transitive via sentence-transformers, but declared here so
    # [tool.uv.sources] below can pin it to the PyTorch CPU index.
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpilot"]

[dependency-groups]
dev = ["pytest>=9.0.3"]

# CPU-only torch — this project does CPU cosine similarity over ~2k vectors,
# CUDA torch pulls in ~4GB of nvidia wheels for zero benefit.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
