[project]
name = "kothar"
version = "0.3.0"
description = "Context-aware capability advisor — recommends MCP servers, skills, and tools for your goal."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Yahia Khallouk", email = "yahia.khallouk@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "claude", "llm", "advisor", "semantic-search", "embeddings", "fastmcp", "kothar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
]
dependencies = [
    "fastmcp>=3.2.0",
    "duckdb>=1.0",
    "sentence-transformers>=3.0",
    "requests>=2.33.0",
    # torch is transitive via sentence-transformers, but declared here so
    # [tool.uv.sources] below can pin it to the PyTorch CPU index.
    "torch",
]

[project.scripts]
kothar = "kothar.server:main"

[project.urls]
Homepage = "https://github.com/yahiaklk/kothar"
Repository = "https://github.com/yahiaklk/kothar"
Issues = "https://github.com/yahiaklk/kothar/issues"
Changelog = "https://github.com/yahiaklk/kothar/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kothar"]

[dependency-groups]
dev = ["pytest>=9.0.3"]

# CPU-only torch — this project does CPU cosine similarity over ~2k vectors,
# CUDA torch pulls in ~4GB of nvidia wheels for zero benefit.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
